[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Text/Pixel Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/MainMenuUI.gd" type="Script" id=2]
[ext_resource path="res://assets/Main/BG.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 1 )

[node name="MainMenuUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Main Menu UI Elements" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Main Menu UI Elements.
Music is NiGiD - Funky Boat. All rights go to him."
}

[node name="MainMenuBackground" type="TextureRect" parent="Main Menu UI Elements"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -50.0
rect_scale = Vector2( 1.00841, 1.07022 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "The background image of the main menu"
}

[node name="Title" type="RichTextLabel" parent="Main Menu UI Elements"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -226.0
margin_right = 226.0
margin_bottom = 98.0
custom_fonts/normal_font = SubResource( 1 )
text = "Main Menu"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "The title of the main menu"
}

[node name="Vertical Container" type="VBoxContainer" parent="Main Menu UI Elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.631
margin_left = -162.0
margin_top = -50.0
margin_right = 152.0
margin_bottom = 15.68
grow_horizontal = 0
grow_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "A vertical container keeps every child in it in order"
}

[node name="Play_Button" type="Button" parent="Main Menu UI Elements/Vertical Container"]
margin_top = 3.0
margin_right = 314.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "A play button to play the game"
}

[node name="Quit_Button" type="Button" parent="Main Menu UI Elements/Vertical Container"]
margin_top = 85.0
margin_right = 314.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 2 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "A quit button to quit the game"
}

[node name="Music_Toggle_Button" type="CheckButton" parent="Main Menu UI Elements"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -59.0
margin_right = 214.0
custom_fonts/font = SubResource( 3 )
pressed = true
text = "MUSIC"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Main Menu UI Elements/Vertical Container/Play_Button" to="." method="_on_Play_Button_pressed"]
[connection signal="pressed" from="Main Menu UI Elements/Vertical Container/Quit_Button" to="." method="_on_Quit_Button_pressed"]
[connection signal="toggled" from="Main Menu UI Elements/Music_Toggle_Button" to="." method="_on_Music_Toggle_Button_toggled"]
